--- a/.gitignore
+++ b/.gitignore
@@ -10,13 +10,11 @@ capybara-*.html
 **.orig
 rerun.txt
 pickle-email-*.html
+.env
 
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
-config/secrets.yml
 
 ## Environment normalisation:
 /.bundle
 /vendor/bundle
-
-config/database.yml
