--- a/.drone.yml
+++ b/.drone.yml
@@ -1,6 +1,6 @@
 image: ruby2.0.0
 services:
-  - postgresql
+  - postgres
 script:
   - mkdir -p /tmp/bundle
   - sudo chown -R ubuntu:ubuntu /tmp/bundle
