--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,8 @@ env:
 script:
   - mkdir -p /tmp/bundle
   - sudo chown -R ubuntu:ubuntu /tmp/bundle
-  - bundle install --path /tmp/bundle
+  - gem update bundler
+  - bundle install -j4 --path /tmp/bundle
   - cp config/database.yml.drone config/database.yml
   - bundle exec rake db:create db:migrate spec
 cache:
